# esp32-obd2

./: .gitignore  CMakeLists.txt  README.md  TODO.md  openocd_jlink.cfg  sdkconfig.defaults
components/bluetooth/: CMakeLists.txt  Kconfig  bt.c  bt.h
components/can/: CMakeLists.txt  Kconfig  can.c  can.h
components/common/: CMakeLists.txt  message.c  message.h
components/obd2/: CMakeLists.txt  obd2.c
components/slcan/: CMakeLists.txt  Kconfig  slcan.c  slcan.h
main/: CMakeLists.txt  Kconfig  bt.c  bt.h  can.c  can.h  config.h  main.c  message.c  message.h  sd.c  sd.h  slcan.c  slcan.h  uart.c  uart.h  util.h  wifi.c  wifi.h
