idf_component_register(SRCS "bt.c"
                            "can.c"
                            "main.c"
                            "message.c"
                            "sd.c"
                            "slcan.c"
                            "uart.c"
                            "wifi.c"
                       INCLUDE_DIRS ".")
